--- a/package.json
+++ b/package.json
@@ -9,15 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/elements": "^0.23.29",
+    "@clerk/localizations": "^3.16.1",
+    "@clerk/nextjs": "^6.20.0",
+    "@headlessui/react": "^2.2.4",
+    "@prisma/client": "^6.8.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/typography": "^0.5.16",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.10.0",
     "lodash.debounce": "^4.0.8",
     "next": "15.3.1",
+    "prisma": "^6.8.2",
+    "radix-ui": "^1.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-tiny-popover": "^8.1.6",
+    "tailwind-merge": "^3.3.0",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
